# NSU-labs-computer-peripherals

./: Lab1DefProgTime.rtf  README.md  eax  ::запис.textClipping  main_O0_x64.s  main_O0_x86.s  main_O3_x64.s  main_O3_x86.s
Lab1/: README.md
Lab2/: README.md
Lab2DefProgTime.rtfd/: TXT.rtf
Lab3/: Clock_GetTime.cpp  README.md  main_O0_x64.s  main_O0_x86.s  main_O3_x64.s  main_O3_x86.s
Lab4/: Clock_GetTime.cpp  Clock_GetTime_O0.s  Clock_GetTime_O3.s  README.md
Lab5/: CMakeLists.txt  README.md  main.cpp
Lab6/: CMakeLists.txt  README.md  main.cpp
Lab7/: Matrix.cpp  Matrix.h  README.md  main.cpp
Lab7/Lab7Blase/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Lab7/Lab7Classic/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Lab7/Lab7Default/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Lab7/Lab7Neon/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Lab8/: CMakeLists.txt  README.md  main.cpp
Lab9/: CMakeLists.txt  README.md  main.cpp
